2010-08-28  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15574: t3lib_extmgmTest::getExtensionVersionForLoadedExtensionReturnsExtensionVersion fails (Thanks to Peter Kühn)

2010-08-28  Francois Suter  <francois@typo3.org>

	* Feature #15334: Allow separate cookie domains for FE and BE

2010-08-27  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15579: Deprecation text of t3lib_div::fixed_lgd_pre() refers to deprecated function t3lib_div::fixed_lgd() (Thanks to Markus Klein)

2010-08-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #1728: Comma separated list don't accept spaces at "db_layout" in the 'addTables' feature (thanks to Niels Pardon)

2010-08-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15569: htmlArea RTE: RTE not loading when ExtJS 3.2.1 is used
	* Fixed bug #15570: htmlArea RTE: Incorrect height when loaded in a hidden tab with ExtJS 3.2.1
	* Fixed bug #15415: htmlArea RTE: RTEs hidden on load not usable with multiple RTEs in a record
	* Fixed bug #15328: htmlArea RTE: Strange behaviours inserting links in IE
	* Fixed bug #15584: htmlArea RTE: iframe baseURL may be incorrectly set
	* Fixed bug #15516: htmlArea RTE: Safari does not support WISIWYG editing on iPad

2010-08-26  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #15565: Labels of pages deep in the tree or with long titles are cut off as horizontal scrolling is disabled

2010-08-26  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15559: Typo in CSS Styled Content Constants: "Audeo" (Thanks to Sebastian Michaelsen)

2010-08-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15477: htmlArea RTE: Unlink may unlink the wrong link in IE

2010-08-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15547: htmlArea RTE may load extJS debug script in FE which makes page loading slow
	* Updated htmlArea RTE manual.

2010-08-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15439: htmlArea RTE: Deprecated call-time pass-by-reference
