@@ -108,19 +108,19 @@ $TYPO3_CONF_VARS = array(
 		'reverseProxyPrefixSSL' => '',				// String: prefix to be added to the internal URL (SCRIPT_NAME and REQUEST_URI) when accessing the server via an SSL proxy. This setting overrides <a href="#SYS-reverseProxyPrefix">[SYS][reverseProxyPrefix]</a>.
 		'caching' => array(
 			'cacheFrontends' => array(
-				't3lib_cache_frontend_VariableFrontend' => 't3lib/cache/frontend/class.t3lib_cache_frontend_variablefrontend.php:t3lib_cache_frontend_VariableFrontend',
-				't3lib_cache_frontend_StringFrontend'   => 't3lib/cache/frontend/class.t3lib_cache_frontend_stringfrontend.php:t3lib_cache_frontend_StringFrontend',
-				't3lib_cache_frontend_PhpFrontend'      => 't3lib/cache/frontend/class.t3lib_cache_frontend_phpfrontend.php:t3lib_cache_frontend_PhpFrontend',
+				't3lib_cache_frontend_VariableFrontend' => 't3lib_cache_frontend_VariableFrontend',
+				't3lib_cache_frontend_StringFrontend'   => 't3lib_cache_frontend_StringFrontend',
+				't3lib_cache_frontend_PhpFrontend'      => 't3lib_cache_frontend_PhpFrontend',
 			),
 			'cacheBackends' => array(
-				't3lib_cache_backend_DbBackend'              => 't3lib/cache/backend/class.t3lib_cache_backend_dbbackend.php:t3lib_cache_backend_DbBackend',
-				't3lib_cache_backend_FileBackend'            => 't3lib/cache/backend/class.t3lib_cache_backend_filebackend.php:t3lib_cache_backend_FileBackend',
-				't3lib_cache_backend_GlobalsBackend'         => 't3lib/cache/backend/class.t3lib_cache_backend_globalsbackend.php:t3lib_cache_backend_GlobalsBackend',
-				't3lib_cache_backend_MemcachedBackend'       => 't3lib/cache/backend/class.t3lib_cache_backend_memcachedbackend.php:t3lib_cache_backend_MemcachedBackend',
-				't3lib_cache_backend_PdoBackend'             => 't3lib/cache/backend/class.t3lib_cache_backend_pdobackend.php:t3lib_cache_backend_PdoBackend',
-				't3lib_cache_backend_ApcBackend'             => 't3lib/cache/backend/class.t3lib_cache_backend_apcbackend.php:t3lib_cache_backend_ApcBackend',
-				't3lib_cache_backend_NullBackend'            => 't3lib/cache/backend/class.t3lib_cache_backend_nullbackend.php:t3lib_cache_backend_NullBackend',
-				't3lib_cache_backend_TransientMemoryBackend' => 't3lib/cache/backend/class.t3lib_cache_backend_transientmemorybackend.php:t3lib_cache_backend_TransientMemoryBackend',
+				't3lib_cache_backend_DbBackend'              => 't3lib_cache_backend_DbBackend',
+				't3lib_cache_backend_FileBackend'            => 't3lib_cache_backend_FileBackend',
+				't3lib_cache_backend_GlobalsBackend'         => 't3lib_cache_backend_GlobalsBackend',
+				't3lib_cache_backend_MemcachedBackend'       => 't3lib_cache_backend_MemcachedBackend',
+				't3lib_cache_backend_PdoBackend'             => 't3lib_cache_backend_PdoBackend',
+				't3lib_cache_backend_ApcBackend'             => 't3lib_cache_backend_ApcBackend',
+				't3lib_cache_backend_NullBackend'            => 't3lib_cache_backend_NullBackend',
+				't3lib_cache_backend_TransientMemoryBackend' => 't3lib_cache_backend_TransientMemoryBackend',
 			),
 			'cacheConfigurations' => array(
 				'cache_hash' => array(
